# pr-review-core

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
examples/: ab_review.rs
src/: agent.rs  backend.rs  blast.rs  command.rs  config.rs  deps.rs  diff.rs  lib.rs  llm.rs  prompt.rs  repo.rs  repo_config.rs  review.rs  structure.rs  webhook.rs
src/providers/: bitbucket.rs  github.rs  gitlab.rs  mod.rs  types.rs
