[package]
name = "pr-review-core"
version = "0.3.0"
edition = "2021"
description = "Core engine for a self-hosted advisory AI PR reviewer: fetches a pull request diff, reviews it with a Claude model via OpenRouter, and posts line-anchored inline comments plus a summary. Works with GitHub and Bitbucket."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nhatvu148/pr-review-core"
readme = "README.md"
keywords = ["pr-review", "code-review", "openrouter", "github", "bitbucket"]
categories = ["development-tools"]

[lib]
name = "pr_review_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"
globset = "0.4"
regex = "1"
tempfile = "3"
toml = "0.8"

# Structural context (Tier B): name the enclosing definition of changed lines.
# tree-sitter 0.24 with grammar crates pinned to their 0.23 line (mutually
# ABI-compatible). Any grammar that won't build against this tree-sitter should
# be dropped rather than left broken.
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
